# neoncode

./: .gitignore  AGENTS.md  README.md  dev
.agents/skills/: agent-browser  hallmark
.pi/prompts/: next-task.md
docs/: app-control.md  architecture.md  configuration.md  development-plan.md  electron-native-terminal-architecture.md  external-tool-inspiration.md  hub.md  issues.md  linux-development.md  native-terminal-coordinator-design.md  poc-to-product-roadmap.md  product-requirements.md  protocol.md  release.md  task-list.md  terminal-renderer-decision.md  testing.md  ui-toolkit-decision.md  windows-terminal-embedding.md  wmux-review.md
docs/ui-screenshots/20260722/: SHA256SUMS.txt
frontends/electron/: README.md  config-store.js  config-store.ts  electron-builder.linux.yml  electron-builder.yml  hub-manager.ts  index.html  main.js  main.ts  node_modules  package-lock.json  package.json  preload.js  preload.ts  renderer.js  renderer.ts  styles.css  token-loader.js  token-loader.ts  tsconfig.base.json  tsconfig.node.json  tsconfig.renderer.json  tsconfig.tests.json
frontends/electron/renderer/: app.js  app.ts  command-palette.ts  command-registry.ts  globals.d.ts  hub-client.js  hub-client.ts  keybinding-router.ts  pane-dialog.ts  pane-focus-model.ts  reconnect-policy.js  reconnect-policy.ts  session-model.js  session-model.ts  settings-view.ts  tab-dialog.ts  terminal-pane.js  (+4 more)
frontends/windows/: README.md
hub/: Cargo.toml
hub/src/: git.rs  lib.rs  main.rs  protocol.rs  session.rs  state.rs  ws.rs
hub/tests/: session_lifecycle.rs
scripts/: alpha-run-portable.ps1  bootstrap-windows-terminal.ps1  build-windows-terminal-control.ps1  check-clean-vm-release.ps1  electron-app.ps1  electron-spike-direct-hub-smoke.ps1  electron-spike-focus-test.ps1  electron-spike.ps1  electron-test.ps1  electron-xterm-behavior-smoke.ps1  electron-xterm-playwright-smoke.ps1  electron-xterm-resize-smoke.ps1  electron-xterm-smoke.ps1  electron-xterm-spike.ps1  generate-release-sbom.cjs  publish-windows-frontend.ps1  release-windows.ps1  verify-release.ps1
spikes/electron-native-terminal/: README.md
spikes/electron-xterm/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js
(+62 files in other folders)
