[package]
name = "neoncode-hub"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
default-run = "neoncode-hub"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
getrandom = "0.3"
hex = "0.4"
hmac = "0.12"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["time"] }
